# Document-Automation

./: .env-template  .gitignore  README.md  app.py  config.py  constants.py  logger.py  pyproject.toml  yolomed-443910-adfa32d6e6a0.json
data/: ASB - BOQ Extract.docx  ASB Mini Project Details.docx  Test 1 . Request for Information RFI.doc  Test 3. Method Statement MS.docx  Test 7. Non-Conformance Report (NCR).doc
task1/: BOQExtract.py  constants.py  main.py  prompts.py
task1/result/: Method_Statement_Output.docx
task2/: WIRExtract.py  constants.py  main.py  prompts.py
task2/results/: task2_result.json
task3/: Test 1 . Request for Information RFI.docx
task3/results/: Test 7. Non-Conformance Report (NCR).docx
task4/: Task-4-System integration.docx
task5/: TASK-5 Deployment & Optimization.docx
utilities/: ai_generator.py  document_text_parser.py  gcp_utils.py  ocr.py
